--- a/templates/security/grupos/form.html
+++ b/templates/security/grupos/form.html
@@ -3,9 +3,9 @@
 {% load static %}
 {% block content %}
 <!-- Vincula el CSS de errores global -->
-<link rel="stylesheet" href="{% static 'error_form.css' %}">
+<link rel="stylesheet" href="{% static 'forms/error_form.css' %}">
 <!-- Vincula el JS para vista previa de íconos -->
-<script src="{% static 'error_form.js' %}"></script>
+<script src="{% static 'forms/error_form.js' %}"></script>
 
 <section class="dark:bg-principal">
     <div class="text-center" data-aos="fade" data-aos-delay="200">
