--- a/templates/security/grupos_modulos_permisos/form.html
+++ b/templates/security/grupos_modulos_permisos/form.html
@@ -2,8 +2,8 @@
 <title>{% block title %}{{ title|default:"Grupos Módulos Permisos" }}{% endblock %}</title>
 {% load static %}
 {% block content %}
-<link rel="stylesheet" href="{% static 'error_form.css' %}">
-<script src="{% static 'error_form.js' %}"></script>
+<link rel="stylesheet" href="{% static 'forms/error_form.css' %}">
+<script src="{% static 'forms/error_form.js' %}"></script>
 
 <section class="dark:bg-principal">
     <div class="text-center" data-aos="fade" data-aos-delay="200">
